# oath-mcp

./: .gitignore  CITATION.cff  LICENSE  README.md  docker-compose.yml  pyproject.toml  uninstall.sh  verify.sh
docker/eztools/: Dockerfile  dotnet-tools.json
docs/: ACCURACY.md  AGENT_LOG.md  ARCHITECTURE.md  ARTIFACT.md  DATASETS.md  DEVPOST.md  PUBLICATION.md  RECORDING.md  TRY_IT_OUT.md
scripts/: bootstrap-forensic-tools.sh  demo.py  dry-run.sh  export_sample_run.py  install-oath-mcp.sh  install-on-sift.sh  install-tools.sh  nss_baseline.py  oath-mcp.sh  prepare-demo.sh  render_accuracy.py  show_self_correction.py
src/oath/: __init__.py  __main__.py  cli.py
src/oath/agent/: demo.py  runner.py
src/oath/benchmark/: __init__.py  claude_agent.py  claude_nss_agent.py  corpus.py  gemini_nss_agent.py  harness.py  question.py  scorer.py
src/oath/mcp/: evidence_handle.py  persistence.py  server.py
src/oath/mcp/tools/: enumerate_credential_artifacts.py  find_strings_on_image.py  parse_amcache.py  parse_evtx.py  parse_mft.py  parse_prefetch.py  parse_registry.py  parse_usnjrnl.py  plaso_supertimeline.py  run_hayabusa.py  vol3_query.py
src/oath/narrator/: __init__.py  terminal.py
src/oath/receipt/: notarized.py
src/oath/witness/: claim.py  ralph_wiggum.py  verifier.py
tests/integration/: test_mcp_server.py  test_spoliation.py
tests/unit/: test_agent_runner.py  test_benchmark.py  test_benchmark_nss.py  test_claude_agent.py  test_claude_nss_agent.py  test_enumerate_credential_artifacts.py  test_find_strings_on_image.py  test_gemini_nss_agent.py  test_narrator.py  test_notarized.py  test_parse_amcache.py  test_parse_evtx.py  test_parse_mft.py  test_parse_prefetch.py  test_parse_registry.py  test_parse_usnjrnl.py  test_plaso_supertimeline.py  test_ralph_wiggum.py  test_run_hayabusa.py  test_vol3_query.py  test_witness_verifier.py
web/: README.md  app.js  build-data.sh  data.js  index.html  styles.css
