[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oath"
version = "0.1.0"
description = "Signed evidence receipts and verifier-gated claims for LLM-assisted digital forensics."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GharsallahDev" }]
requires-python = ">=3.11"

dependencies = [
    # MCP server
    "mcp>=1.0.0",
    # Crypto / signing
    "cryptography>=42.0.0",
    "blake3>=0.4.0",
    "pynacl>=1.5.0",
    # Evidence parsing
    "python-evtx>=0.7.4",          # EVTX
    "construct>=2.10.0",            # struct-parse for registry / MFT
    "regipy>=4.0.0",                # Windows registry hives
    "libfwsi-python>=20240315",     # Shell items / ShellBags
    "yara-python>=4.5.0",           # YARA scanning
    # Volatility 3 (memory)
    "volatility3>=2.7.0",
    # Forensic-specific
    "dfir-iris-client>=2.0.0",
    # General tooling
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "hypothesis>=6.100.0",
]
benchmark = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",  # for isotonic regression calibration
    "matplotlib>=3.8.0",
]
vertex = [
    "google-cloud-aiplatform>=1.50.0",  # adversarial corpus generation
]
claude = [
    "anthropic>=0.40.0",  # benchmark live-agent bridge (Anthropic SDK + MCP)
]

[project.scripts]
oath = "oath.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oath"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
